<resources>
    <string name="app_name">My Doc</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signIn_welcome">Welcome</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_a_member">Already a member? Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="google_signIn">Google Sign in</string>
</resources>