<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/medical_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <!--   <TextView
           android:id="@+id/tvfirstname"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="45dp"
           android:layout_marginTop="24dp"
           android:text="First name"
           android:textColor="@color/black"
           android:textSize="18sp"
           android:textStyle="bold"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.113"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/ivlogo" />-->

    <!-- <EditText
         android:id="@+id/etfirstname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="65dp"
         android:background="@drawable/edit_text_border"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvfirstname" />
 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvFirstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/first_name"
        app:boxStrokeColor="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivlogo">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivlogo" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/last_name"
        app:boxStrokeColor="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstName">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastName">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--  <TextView
          android:id="@+id/tvlastname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="45dp"
          android:layout_marginTop="24dp"
          android:text="Last name"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.113"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etfirstname" />

      <EditText
          android:id="@+id/etlastname"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="80dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvlastname" />

      <TextView
          android:id="@+id/tvemail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="45dp"
          android:layout_marginTop="24dp"
          android:text="Email"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.113"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etlastname" />

      <EditText
          android:id="@+id/etemail"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="80dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvemail" />

      <TextView
          android:id="@+id/tvpassword"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="45dp"
          android:layout_marginTop="24dp"
          android:text="Password"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.113"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etemail" />

      <EditText
          android:id="@+id/etpassword"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginLeft="80dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tvpassword" />

      <TextView
          android:id="@+id/tvalreadymember"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="2dp"
          android:gravity="center"
          android:text="Already a member? Login"
          android:textColor="@color/black"
          android:textSize="10sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.113"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/etpassword" />
  -->
    <TextView
        android:id="@+id/tvalreadymember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/already_a_member"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:backgroundTint="@color/teal"
        android:textColor="@color/white"
        android:text="@string/sign_up"
        android:background="@drawable/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvalreadymember" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dotted"
        android:layout_marginTop="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvsignupwith"
        app:layout_constraintEnd_toEndOf="@+id/gl_left"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btsignup"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvsignupwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="Or Sign in with"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btsignup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.62" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dotted"
        android:layout_marginTop="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvsignupwith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_right"
        app:layout_constraintTop_toBottomOf="@+id/btsignup"
        app:layout_constraintVertical_bias="1.0" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="6dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:backgroundTint="@color/teal"
        android:drawableLeft="@drawable/google"
        android:text="@string/google_signIn"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@+id/tvsignupwith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="649dp" />

</androidx.constraintlayout.widget.ConstraintLayout>